--- a/.github/workflows/generate-unreal-engine-docsets.yml
+++ b/.github/workflows/generate-unreal-engine-docsets.yml
@@ -35,21 +35,54 @@ jobs:
           poetry run python -m pip install --upgrade pip
           poetry install
         shell: bash
+
+      - name: Restore cached C++ API Documentation
+        id: cache-cpp-restore
+        uses: actions/cache/restore@v4
+        with:
+          path: ~/Games/UE_$CI_UNREAL_ENGINE_VERSION/Engine/Documentation/Builds/CppAPI-HTML.tgz
+          key: ue-${{ inputs.ue-version }}-cpp
+
+      - name: Restore cached Blueprint API Documentation
+        id: cache-blueprint-restore
+        uses: actions/cache/restore@v4
+        with:
+          path: ~/Games/UE_$CI_UNREAL_ENGINE_VERSION/Engine/Documentation/Builds/BlueprintAPI-HTML.tgz
+          key: ue-${{ inputs.ue-version }}-blueprint
+            
       - name: Install Legendary
+        if: steps.cache-cpp-restore.outputs.cache-hit != 'true' || steps.cache-blueprint-restore.outputs.cache-hit != 'true'
         run: |
           pip install legendary-gl
         shell: bash
       - name: Authenticate with Epic Games
+        if: steps.cache-cpp-restore.outputs.cache-hit != 'true' || steps.cache-blueprint-restore.outputs.cache-hit != 'true'
         run: |
           mkdir -p ~/.config/legendary
           echo "${{ secrets.LEGENDARY_USER_JSON }}" | base64 --decode > ~/.config/legendary/user.json
           legendary auth
         shell: bash
       - name: Download Unreal Engine
+        if: steps.cache-cpp-restore.outputs.cache-hit != 'true' || steps.cache-blueprint-restore.outputs.cache-hit != 'true'
         run: |
           legendary list --include-ue
           legendary download UE_$CI_UNREAL_ENGINE_VERSION --include-ue --platform Windows --install-tag "" --yes
         shell: bash
+
+      - name: Save cached C++ API Documentation
+        id: cache-cpp-save
+        uses: actions/cache/save@v4
+        with:
+          path: ~/Games/UE_$CI_UNREAL_ENGINE_VERSION/Engine/Documentation/Builds/CppAPI-HTML.tgz
+          key: ue-${{ steps.cache-cpp-restore.outputs.cache-primary-key }}
+
+      - name: Save cached Blueprint API Documentation
+        id: cache-blueprint-save
+        uses: actions/cache/save@v4
+        with:
+          path: ~/Games/UE_$CI_UNREAL_ENGINE_VERSION/Engine/Documentation/Builds/BlueprintAPI-HTML.tgz
+          key: ue-${{ steps.cache-blueprint-restore.outputs.cache-primary-key }}
+      
       - name: Generate C++ Docset
         run: |
           poetry run python unreal_engine_docset.py --input "~/Games/UE_$CI_UNREAL_ENGINE_VERSION/Engine/Documentation/Builds/CppAPI-HTML.tgz" --output D:/
